<resources>
    <!-- Place Holders & Labels -->
    <string name="app_name">Wearable_Remake</string>
    <string name="todayLbl">Today</string>
    <string name="movesTodayLbl">Movements Today</string>
    <string name="hundredLbl">100</string>
    <string name="moveByHourLbl">Movements by Hour</string>
    <string name="lastActionLbl">Last Movement:</string>
    <string name="recActionTxt">Unidentified Movement</string>

    <!-- Settings Strings -->
    <string name="removeTileLbl">Remove Tile</string>
    <string name="recDataLbl">Record Data</string>
    <string name="liveGraphLbl">Live Graphing</string>
    <string name="sendHapticsLbl">Vibrate</string>
    <string name="moveGoalLbl">Movement Goal</string>
    <string name="moveGoalBtn">Set Movement Goal</string>

    <!-- Nav menu items -->
    <string-array name="navigation_drawer_items_array">
        <item>Settings</item>
    </string-array>

</resources>
